# website-content-search

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  run.sh
backend/app/: deps.py  main.py
backend/app/api/: routers.py
backend/app/core/: config.py
backend/app/models/: request_models.py
backend/app/services/: chunking_service.py  weaviate_service.py
backend/app/utils/: html_utils.py
frontend/: package-lock.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ResultCard.tsx  ResultsList.tsx  SearchBar.tsx
